--- a/src/components/index.html
+++ b/src/components/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pluralsight Admin</title>
+	<meta charset = "UTF-8">
+    <title>Contacts App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <div id = "app"></div>
+    <script src="/bundle.js"></script> <!--goes to index-->
   </body>
 </html>
