--- a/src/components/index.html
+++ b/src/components/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
 	<meta charset = "UTF-8">
+	<link href="//cdn.muicss.com/mui-0.9.25/css/mui.min.css" rel="stylesheet" type="text/css" media="screen" />
     <title>Contacts App</title>
   </head>
   <body>
