--- a/src/components/dialog.css
+++ b/src/components/dialog.css
@@ -9,6 +9,7 @@
   margin: auto;
   background-color: rgba(0,0,0, 0.5);
   font-family: "Helvetica", serif;
+  display: flex;
 }
 .popup_inner {
   position: absolute;
@@ -38,20 +39,24 @@
   display: flex;
   align-items: center;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 35px;
 }
 .question{
   text-align: center;
+  width: 80%;
+  align-items: center;
+  margin: auto;
+  padding: 10px;
 }
 .yesno{
   width: 50%;
   margin: auto;
 }
-.yes{
+#yes{
   float: left;
   width: 100px;
 }
-.no{
+#no{
   float: right;
   width: 100px;
 }
