--- a/src/components/form.css
+++ b/src/components/form.css
@@ -1,11 +1,3 @@
-.FormHeading{
-	color: blue;
-	justify-content: center;
-	display: flex;
-	align-items: center;
-	font-family: "Helvetica", serif;
-	font-size: 50px;
-	}
 .ContactForm {
 	width: 50%;
 	margin: auto;
@@ -13,22 +5,28 @@
 	font-family: "Helvetica", serif;
 	clear: both;
 	}
-label{
-	text-align:right;
-	padding-right:20px;
-	display:inline-block;
-	width: 30%;
-	margin-bottom: 30px;
-}
-input[type='text']{
-	padding: 8px;
-	display:inline-block;
-	width: 40%;
-}
+
 .SaveButton{
-margin-left: 500px;
+	margin: auto;
+	width: 150px;
+	height: 50px;
 	align-self: center;
-		justify-content: center;
+	justify-content: center;
 	display: flex;
 	align-items: center;
+}
+#formHeading{
+	align-self: center;
+	justify-content: center;
+	display: flex;
+	align-items: center;
+	padding-top: 30px;
+	color:#2c94ec;
+}
+#hint{
+	align-self: center;
+	justify-content: center;
+	display: flex;
+	align-items: center;
+	padding-top: 30px;
 }
