--- a/src/components/viewContact.css
+++ b/src/components/viewContact.css
@@ -1,13 +1,12 @@
-.ContactName{
-	color: blue;
+#ContactName{
 	justify-content: center;
 	display: flex;
 	align-items: center;
 	font-family: "Helvetica", serif;
-	font-size: 50px;
+	padding-top: 10px;
+	color: #2c94ec;
 }
-.Contact{
-	border: 1px solid black;
+#Contact{
 	margin: auto;
 	width: 50%;
 	justify-content: center;
