created tests for dialog boxes

--- a/src/components/dialog.css
+++ b/src/components/dialog.css
@@ -67,10 +67,10 @@
   height: 50px;
   font-size: 22px;
 }
-#SaFPopup{
+#SuccessAndFailurePopup{
   z-index: 2;
 }
-#SaFPopupInner{
+#SuccessAndFailurePopupInner{
   z-index: 2;
 }
 
